# log-viewer

./: CMakeLists.txt  LICENSE  config
scripts/: build.sh  ninja_log_parse.py
src/: main.cpp
src/core/: alias.cpp  alias.hpp  app.cpp  app.hpp  argparse.cpp  argparse.hpp  assert.cpp  assert.hpp  bookmarks.cpp  bookmarks.hpp  buffer.cpp  buffer.hpp  buffers.cpp  buffers.hpp  command.cpp  command.hpp  command_line.cpp  command_line.hpp  config.cpp  config.hpp  context.cpp  context.hpp  dirs.cpp  dirs.hpp  entity.cpp  entity.hpp  entity_id.hpp  error.cpp  error.hpp  event.cpp  event.hpp  event_handler.hpp  file.cpp  file.hpp  file_load.cpp  file_load.hpp  files.hpp  fuzzy.cpp  fuzzy.hpp  fwd.hpp  (+60 more)
src/core/commands/: add_bookmark.cpp  bookmarks.cpp  echo.cpp  filter.cpp  get.cpp  grep.cpp  grep.hpp  grepper.cpp  help.cpp  highlight.cpp  map.cpp  open.cpp  open.hpp  picker.cpp  quit.cpp  set.cpp  source.cpp  source.hpp  toggle.cpp
src/core/events/: buffer_loaded.hpp  key_press.hpp  resize.hpp  search_finished.hpp
src/core/interpreter/: command.cpp  command.hpp  fwd.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  object.cpp  object.hpp  symbol.cpp  symbol.hpp  symbols_map.hpp  value.cpp  value.hpp
src/sys/: common.hpp  file.hpp  log_printer.hpp  mapping.hpp  posix.cpp  posix.hpp  system.hpp
src/ui/: bookmarks_renderer.cpp  bookmarks_renderer.hpp  command_line.cpp  command_line.hpp  config.hpp  event_converter.cpp  event_converter.hpp  event_handler.cpp  event_handler.hpp  event_hash.hpp  ftxui.cpp  ftxui.hpp  ftxui_creator.hpp  fwd.hpp  grepper.cpp  grepper.hpp  main_view.cpp  main_view.hpp  palette.hpp  picker.cpp  picker.hpp  picker_entry.cpp  picker_entry.hpp  scroll.cpp  scroll.hpp  status_line.cpp  status_line.hpp  text_box.cpp  text_box.hpp  ui_component.cpp  ui_component.hpp  view.cpp  view.hpp  view_node.cpp  view_node.hpp  view_renderer.cpp  view_renderer.hpp  window_renderer.cpp  window_renderer.hpp
src/utils/: bitflag.hpp  buffer.cpp  buffer.hpp  enum_traits.hpp  format.hpp  function_ref.hpp  fwd.hpp  hash_map.hpp  immobile.hpp  inline.hpp  math.cpp  math.hpp  maybe.hpp  memory.hpp  noncopyable.hpp  ring_buffer.hpp  shared_ptr.hpp  side_effect.hpp  source_location.hpp  string.cpp  string.hpp  time.cpp  time.hpp  time_format.cpp  time_format.hpp  trie.hpp  unique_ptr.hpp  units.hpp
test/: CMakeLists.txt  bitflag_tests.cpp  buffer_tests.cpp  hash_map_tests.cpp  lexer_tests.cpp  maybe_tests.cpp  parser_tests.cpp  ring_buffer_tests.cpp  trie_tests.cpp  value_tests.cpp
